tests/invalid/runtime/map_missing_key.pts
function main() : void {
    map<string, int> m = {"a": 1};
    int x = m["missing"];
    Sys.print(x.toString());
}
